--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.18.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.10.0",
     "next": "13.4.19",
-    "postcss": "^8.4.31",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
