--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.18.0",
+    "@tabler/icons-react": "^3.34.0",
     "autoprefixer": "^10.4.17",
     "next": "13.4.19",
     "postcss": "^8.4.31",
