--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.18.0",
     "@tabler/icons-react": "^3.34.0",
     "axios": "^1.10.0",
-    "next": "^13.5.11",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "nodemon": "^3.1.10"
+    "tailwindcss": "^3.4.17"
   }
 }
