package.json edit

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "autoprefixer": "^10.4.21",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
-<<<<<<< HEAD
+
     "tailwindcss": "^3.4.17",
-    "typescript": "5.8.3"
-=======
+    "typescript": "5.8.3",
+
     "tailwindcss": "^3.4.17"
->>>>>>> 3b8c7721e3b23fbaf25ef497b34841d61d16fefd
+
   }
 }
