--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.10.8",
     "autoprefixer": "^10.4.17",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
