--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "amqplib": "^0.10.8",
     "autoprefixer": "^10.4.17",
     "axios": "^1.10.0",
-    "next": "13.4.19",
+    "next": "^13.5.11",
+    "notistack": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sweetalert2": "^11.22.2",
-    "tailwind": "^4.0.0"
+    "sweetalert2": "^11.6.13",
+    "tailwind": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "24.0.13",
