--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.7",
     "multer": "^2.0.2",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.4.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sweetalert2": "^11.22.2",
     "tailwind": "^2.3.1"
   },
