--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.7",
     "multer": "^2.0.2",
     "next": "^15.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sweetalert2": "^11.22.2",
