--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "multer": "^2.0.2",
     "next": "^15.4.4",
     "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sweetalert2": "^11.22.2",
+    "sweetalert2": "^11.6.13",
     "tailwind": "^2.3.1"
   },
   "devDependencies": {
